--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AreaAndVolume">
+        <activity android:name=".volume.Cube"></activity>
+        <activity android:name=".volume.Cone" />
+        <activity android:name=".volume.Cylinder" />
+        <activity android:name=".volume.Sphere" />
+        <activity android:name=".area.Circle" />
+        <activity android:name=".area.Triangle" />
+        <activity android:name=".area.Rectangle" />
+        <activity android:name=".area.Square" />
+        <activity android:name=".PerformedActions" />
+        <activity android:name=".Volumes" />
+        <activity android:name=".Areas" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
